syntax = "proto3";

package payment.v1;

option go_package = "github.com/YuraMishin/bigtechmicroservices/shared/pkg/proto/payment/v1;payment_v1";

service PaymentService {
  rpc PayOrder(PayOrderRequest) returns (PayOrderResponse);
}

// PayOrderRequest represents a request to pay for an order
message PayOrderRequest {
  string order_uuid = 1;        // UUID заказа
  string user_uuid = 2;         // UUID пользователя, который инициирует оплату
  PaymentMethod payment_method = 3; // Выбранный способ оплаты
}

// PaymentMethod represents the available payment methods
enum PaymentMethod {
  PAYMENT_METHOD_UNSPECIFIED = 0;          // Неизвестный способ
  PAYMENT_METHOD_CARD = 1;                 // Банковская карта
  PAYMENT_METHOD_SBP = 2;                  // Система быстрых платежей
  PAYMENT_METHOD_CREDIT_CARD = 3;          // Кредитная карта
  PAYMENT_METHOD_INVESTOR_MONEY = 4;       // Деньги инвестора (внутренний метод)
}

// PayOrderResponse represents the response after payment processing
message PayOrderResponse {
  string transaction_uuid = 1;  // UUID транзакции
}
